@@ -3,11 +3,14 @@
 $(top_builddir)/libxslt/xsltproc:
 	@(cd ../../libxslt ; make xsltproc)
 
+EXTRA_DIST = doc.xsl doc.xml result.xml
+
+all: test
+
 test tests: $(top_builddir)/libxslt/xsltproc
 	@(rm -f .memdump ; touch .memdump)
 	@($(top_builddir)/libxslt/xsltproc doc.xsl doc.xml > doc.res ; \
 	diff result.xml doc.res ; \
 	grep "MORY ALLO" .memdump  | grep -v "MEMORY ALLOCATED : 0";\
 	rm -f doc.res)
-
 
