@@ -3,6 +3,10 @@
 $(top_builddir)/libxslt/xsltproc:
 	@(cd ../../libxslt ; make xsltproc)
 
+EXTRA_DIST = data.xml vrml.xsl vrml.xml svg.xsl svg.xml	html.xsl html.xml
+
+all: test
+
 test tests: $(top_builddir)/libxslt/xsltproc
 	@(rm -f .memdump ; touch .memdump)
 	@($(top_builddir)/libxslt/xsltproc vrml.xsl data.xml > vrml.res ; \
@@ -17,5 +21,4 @@ test tests: $(top_builddir)/libxslt/xsltproc
 	diff html.xml html.res ; \
 	grep "MORY ALLO" .memdump  | grep -v "MEMORY ALLOCATED : 0";\
 	rm -f html.res)
-
 
